@@ -1,4 +1,4 @@
-#	$NetBSD: Makefile,v 1.337 2004/11/24 22:38:44 wiz Exp $
+#	$NetBSD: Makefile,v 1.338 2004/12/01 22:27:45 grant Exp $
 #	@(#)Makefile	8.1 (Berkeley) 6/18/93
 
 MAN=	aac.4 acardide.4 aceride.4 acphy.4 adc.4 adv.4 \
@@ -19,7 +19,7 @@ MAN=	aac.4 acardide.4 aceride.4 acphy.4 adc.4 adv.4 \
 	hptide.4 icmp.4 icp.4 icsphy.4 idp.4 ifmedia.4 \
 	igsfb.4 iha.4 inet.4 inphy.4 intersil7170.4 \
 	ioasic.4 ioat.4 iop.4 iophy.4 iopsp.4 ip.4 ipkdb.4 ipw.4 \
-	iso.4 isp.4 joy.4 kloader.4 ksyms.4 kttcp.4 lc.4 \
+	iso.4 isp.4 iteide.4 joy.4 kloader.4 ksyms.4 kttcp.4 lc.4 \
 	ld.4 lkm.4 lo.4 lxtphy.4 mainbus.4 makphy.4 \
 	mbe.4 mca.4 mcclock.4 md.4 mfb.4 mhzc.4 midi.4 \
 	mii.4 mk48txx.4 mlx.4 mly.4 mpt.4 mpu.4 mtd.4 \
